# rocket

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CmakePresets.json  README.md  clean_cmake.sh  format.sh  format_check.sh  requirements.txt
.github/workflows/: ci-actions.yml
app/: CMakeLists.txt
app/Demo/: CMakeLists.txt
app/can/: CMakeLists.txt
app/cli_app/: interrupts.c  main.c
app/cli_f7/: CMakeLists.txt  main.c  usart_cli.c  usart_cli.h
cmake/: build-util.cmake
common/core/: CMakeLists.txt
common/core/cli/: cli.c  send.h
common/core/comms/: CMakeLists.txt  cmd_message.h  lbr_net.c  lbr_net.h  lbr_net_test.cc  net_interface.h  network_interface.h  pb_cmd.h  pb_cmd_message.c  uart_pipe.c  uart_pipe.h
common/core/container/: ring_buffer.c  ring_buffer.h  ring_buffer_test.cc
common/core/error/: exit.h
common/core/gnc/: CMakeLists.txt  acceleration.c  acceleration.h  gnc_constants.h  nav_data.h  navigator.h  simple_kalman.h
common/core/hardware/: gpio_cs.c  nav_data.h
common/core/lbr_net/: CMakeLists.txt  custom_bus.c  custom_bus.h  format_test.cc  lbr_net.c  lbr_net.h  lbr_net_test.cc
common/core/math/: CMakeLists.txt  kalman.c  kalman.h  math_util.h  matrix.c  matrix.h  quaternion.c  quaternion.h  quaternion_test.cc  simple_kalman.c
common/core/memory/: CMakeLists.txt  alloc.h  alloc_test.cc  dalloc.h  stalloc.c  stalloc.h
common/core/mission/: nav_data.h  navigator.h
common/core/motors/: CMakeLists.txt  dcm_control_test.cc  drv8242_dcm_test.cc  drv8242_enc_test.cc  motor.h  nidec_24h.c  nidec_24h.h
common/core/motors/DC/: CMakeLists.txt  dcm.c  dcm.h  drv8242_dcm.c  drv8242_dcm.h  drv8242_dcm_test.cc  fake_dcm.c  fake_dcm.h
common/core/motors/encoder/: drv8242_enc.c  drv8242_enc.h  drv8242_enc_test.cc  fake_enc.c  fake_enc.h  st_enc.c  st_enc.h
common/core/motors/motor_control/: dcm_control.c  dcm_control.h  fake_dcm_control.c  fake_dcm_control.h
common/core/periph/: CMakeLists.txt
common/core/periph/bmp390/: bmp390.c
common/core/periph/rs485/: snx5176b.c  snx5176b.h
common/core/periph/switches/: count_debounce.c  count_debounce.h  io_input.h
common/core/periph/w25q/: mock_w25q.c  mock_w25q.h  w25q.c  w25q.h
common/core/proto/: CMakeLists.txt  example.pb.c  example.pb.h
common/core/string/: string_hex.c
common/core/switches/: io_input.h
common/core/timeout/: CMakeLists.txt  retry_timer_test.cc
common/core/tjbus/: CMakeLists.txt  custom_bus.c  custom_bus.h  format_test.cc  tj_send.c  tj_send.h  uart_checksum.h  uart_custom_bus.h
mcu_support/: CMakeLists.txt
mcu_support/stm32/f7xx/HAL/: stm32f7xx_hal_rcc.c
mcu_support/stm32/l4xx/l412/: STM32L412KBUX_FLASH.ld  startup_stm32l412xx.s
(+203 files in other folders)
